@@ -10,6 +10,9 @@ New: Sieve protocol test implemented. Usage:
 Fixed: If the "not every <cron>" option matched, the test was
 skipped only once per minute.
 
+Fixed: Issue #115: The CLI/GUI reported port timeout value 1000x
+higher.
+
 
 Version 5.10
 
